test/invalid-syntax/58182_missing_semicolon/missing_semicolon.agu
-- Author: 58182, Gabriel Henriques

let missingSemicolon : Int =
    let anotherVar : Int = 456
    anotherVar